--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.js*' --fix --max-warnings=0",
-    "format": "prettier --write \"src/**/*.+(js|jsx|json|yml|yaml|css|md|vue)\""
+    "format": "prettier --write \"src/**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
+    "postbuild": "react-snap"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -23,8 +24,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-snap": "^1.23.0",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
